// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Api compileEndpoint should compile the Api Resource with embedded additional authorizer Lambda function 1`] = `
{
  "GraphQlApi": {
    "Properties": {
      "AdditionalAuthenticationProviders": [
        {
          "AuthenticationType": "AWS_LAMBDA",
          "LambdaAuthorizerConfig": {
            "AuthorizerResultTtlInSeconds": undefined,
            "AuthorizerUri": {
              "Fn::GetAtt": [
                "MyApiAuthorizerLambdaFunction",
                "Arn",
              ],
            },
            "IdentityValidationExpression": undefined,
          },
        },
      ],
      "AuthenticationType": "API_KEY",
      "EnvironmentVariables": undefined,
      "Name": "MyApi",
      "Tags": [
        {
          "Key": "stage",
          "Value": "Dev",
        },
      ],
      "XrayEnabled": false,
    },
    "Type": "AWS::AppSync::GraphQLApi",
  },
}
`;

exports[`Api compileEndpoint should compile the Api Resource with embedded additional authorizer Lambda function 2`] = `
{
  "MyApiAuthorizer": {
    "handler": "index.handler",
  },
}
`;

exports[`Api compileEndpoint should compile the Api Resource with embedded authorizer Lambda function 1`] = `
{
  "GraphQlApi": {
    "Properties": {
      "AuthenticationType": "AWS_LAMBDA",
      "EnvironmentVariables": undefined,
      "LambdaAuthorizerConfig": {
        "AuthorizerResultTtlInSeconds": undefined,
        "AuthorizerUri": {
          "Fn::GetAtt": [
            "MyApiAuthorizerLambdaFunction",
            "Arn",
          ],
        },
        "IdentityValidationExpression": undefined,
      },
      "Name": "MyApi",
      "Tags": [
        {
          "Key": "stage",
          "Value": "Dev",
        },
      ],
      "XrayEnabled": false,
    },
    "Type": "AWS::AppSync::GraphQLApi",
  },
}
`;

exports[`Api compileEndpoint should compile the Api Resource with embedded authorizer Lambda function 2`] = `
{
  "MyApiAuthorizer": {
    "handler": "index.handler",
  },
}
`;

exports[`Domains should generate domain resources 1`] = `
{
  "GraphQlDomainAssociation": {
    "DeletionPolicy": "Delete",
    "DependsOn": [
      "GraphQlDomainName",
    ],
    "Properties": {
      "ApiId": {
        "Fn::GetAtt": [
          "GraphQlApi",
          "ApiId",
        ],
      },
      "DomainName": "api.example.com",
    },
    "Type": "AWS::AppSync::DomainNameApiAssociation",
  },
  "GraphQlDomainCertificate": {
    "DeletionPolicy": "Delete",
    "Properties": {
      "DomainName": "api.example.com",
      "DomainValidationOptions": [
        {
          "DomainName": "api.example.com",
          "HostedZoneId": "Z111111QQQQQQQ",
        },
      ],
      "ValidationMethod": "DNS",
    },
    "Type": "AWS::CertificateManager::Certificate",
  },
  "GraphQlDomainName": {
    "DeletionPolicy": "Delete",
    "Properties": {
      "CertificateArn": {
        "Ref": "GraphQlDomainCertificate",
      },
      "DomainName": "api.example.com",
    },
    "Type": "AWS::AppSync::DomainName",
  },
  "GraphQlDomainRoute53Record": {
    "DeletionPolicy": "Delete",
    "Properties": {
      "AliasTarget": {
        "DNSName": {
          "Fn::GetAtt": [
            "GraphQlDomainName",
            "AppSyncDomainName",
          ],
        },
        "EvaluateTargetHealth": false,
        "HostedZoneId": {
          "Fn::GetAtt": [
            "GraphQlDomainName",
            "HostedZoneId",
          ],
        },
      },
      "HostedZoneId": "Z111111QQQQQQQ",
      "Name": "api.example.com",
      "Type": "A",
    },
    "Type": "AWS::Route53::RecordSet",
  },
}
`;

exports[`Domains should generate domain resources with custom certificate ARN 1`] = `
{
  "GraphQlDomainAssociation": {
    "DeletionPolicy": "Delete",
    "DependsOn": [
      "GraphQlDomainName",
    ],
    "Properties": {
      "ApiId": {
        "Fn::GetAtt": [
          "GraphQlApi",
          "ApiId",
        ],
      },
      "DomainName": "api.example.com",
    },
    "Type": "AWS::AppSync::DomainNameApiAssociation",
  },
  "GraphQlDomainName": {
    "DeletionPolicy": "Delete",
    "Properties": {
      "CertificateArn": "arn:aws:acm:us-east-1:1234567890:certificate/e4b6e9be-1aa7-458d-880e-069622e5be52",
      "DomainName": "api.example.com",
    },
    "Type": "AWS::AppSync::DomainName",
  },
  "GraphQlDomainRoute53Record": {
    "DeletionPolicy": "Delete",
    "Properties": {
      "AliasTarget": {
        "DNSName": {
          "Fn::GetAtt": [
            "GraphQlDomainName",
            "AppSyncDomainName",
          ],
        },
        "EvaluateTargetHealth": false,
        "HostedZoneId": {
          "Fn::GetAtt": [
            "GraphQlDomainName",
            "HostedZoneId",
          ],
        },
      },
      "HostedZoneName": "example.com.",
      "Name": "api.example.com",
      "Type": "A",
    },
    "Type": "AWS::Route53::RecordSet",
  },
}
`;

exports[`Domains should generate domain resources with custom hostedZoneId 1`] = `
{
  "GraphQlDomainAssociation": {
    "DeletionPolicy": "Delete",
    "DependsOn": [
      "GraphQlDomainName",
    ],
    "Properties": {
      "ApiId": {
        "Fn::GetAtt": [
          "GraphQlApi",
          "ApiId",
        ],
      },
      "DomainName": "api.example.com",
    },
    "Type": "AWS::AppSync::DomainNameApiAssociation",
  },
  "GraphQlDomainName": {
    "DeletionPolicy": "Delete",
    "Properties": {
      "CertificateArn": "arn:aws:acm:us-east-1:1234567890:certificate/e4b6e9be-1aa7-458d-880e-069622e5be52",
      "DomainName": "api.example.com",
    },
    "Type": "AWS::AppSync::DomainName",
  },
  "GraphQlDomainRoute53Record": {
    "DeletionPolicy": "Delete",
    "Properties": {
      "AliasTarget": {
        "DNSName": {
          "Fn::GetAtt": [
            "GraphQlDomainName",
            "AppSyncDomainName",
          ],
        },
        "EvaluateTargetHealth": false,
        "HostedZoneId": {
          "Fn::GetAtt": [
            "GraphQlDomainName",
            "HostedZoneId",
          ],
        },
      },
      "HostedZoneId": "Z111111QQQQQQQ",
      "Name": "api.example.com",
      "Type": "A",
    },
    "Type": "AWS::Route53::RecordSet",
  },
}
`;

exports[`Domains should generate domain resources with custom hostedZoneName 1`] = `
{
  "GraphQlDomainAssociation": {
    "DeletionPolicy": "Delete",
    "DependsOn": [
      "GraphQlDomainName",
    ],
    "Properties": {
      "ApiId": {
        "Fn::GetAtt": [
          "GraphQlApi",
          "ApiId",
        ],
      },
      "DomainName": "foo.api.example.com",
    },
    "Type": "AWS::AppSync::DomainNameApiAssociation",
  },
  "GraphQlDomainName": {
    "DeletionPolicy": "Delete",
    "Properties": {
      "CertificateArn": "arn:aws:acm:us-east-1:1234567890:certificate/e4b6e9be-1aa7-458d-880e-069622e5be52",
      "DomainName": "foo.api.example.com",
    },
    "Type": "AWS::AppSync::DomainName",
  },
  "GraphQlDomainRoute53Record": {
    "DeletionPolicy": "Delete",
    "Properties": {
      "AliasTarget": {
        "DNSName": {
          "Fn::GetAtt": [
            "GraphQlDomainName",
            "AppSyncDomainName",
          ],
        },
        "EvaluateTargetHealth": false,
        "HostedZoneId": {
          "Fn::GetAtt": [
            "GraphQlDomainName",
            "HostedZoneId",
          ],
        },
      },
      "HostedZoneName": "example.com.",
      "Name": "foo.api.example.com",
      "Type": "A",
    },
    "Type": "AWS::Route53::RecordSet",
  },
}
`;
